Fixed the moble display bugs, when it is xs screen, the column didn't show as col-12, but overlaping each other. Fixed by import index.css first and then import media.css

--- a/Electric_Charging_Stations/static/css/index.css
+++ b/Electric_Charging_Stations/static/css/index.css
@@ -6,7 +6,7 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    max-width: 100%;
+    max-width: 76%;
 }
 
 .header-1 {
